# Spin-The-Bottle-Game

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  asset_original.json  babel.cfg  client.py  docker-compose.yml  pyproject.toml
docker/nginx/: app-ssl.conf  app.conf  tgfiles.conf
logs/: logger.yml  logger_conf.py  tunnel.url
scripts/: deploy-check.sh  disable-host-nginx.sh  hide_polaroid_hand.py
src/: all_bases_v2.txt  check_rooms.py  downloader.py  fast_downloader.py  final_url_list.txt  final_url_list_v2.txt  fix_sfx_ui.txt  manual_fix_list.txt  manual_fix_list_v2.txt  recreate_db.py  seed_data.py  seed_tables.py  sfx_fix_list.txt
src/app/: main.py
src/app/api/: app.py  deps.py  game_entry.py  game_session.py
src/app/bot/: __init__.py  admin_access.py  commands.py  i18n.py  miniapp_url.py  polling_runner.py  setup.py  telegram_safe.py  webapp_menu.py
src/app/brain/: check_assets.py  check_spine.py  find_crown.py  find_fixes.py  find_unlinked.py  fix_animations.py  match_spines.py  rebuild_from_original.py  sync_from_original.py
src/app/core/: config.py  geo.py  jwt.py  language.py  room_policy.py  stars_support.py  telegram_invite.py  username.py
src/app/database/: backup_restore.py  base.py  schema_auto_sync.py  schema_patches.py  sequence_sync.py
src/app/services/: broadcaster.py  google_translate.py  harem_notifications.py  referral_rewards.py  scheduled_backup.py  telegram_bot_info.py  telegram_payments.py  telegram_profile.py  telegram_webapp_auth.py
src/app/site/: admin.html  assets.json  banned.html  bottle_mobile.html  (+6 more)
(+3034 files in other folders)
