[project]
name = "spinthebootlegame"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "babel>=2.17.0",
    "aiohttp>=3.11.0",
    "aiogram>=3.27.0",
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.13.0",
    "colorlog>=6.10.1",
    "environs>=15.0.1",
    "fastapi>=0.136.1",
    "geoip2>=5.2.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "msgpack>=1.1.2",
    "pycryptodome>=3.23.0",
    "pyjwt>=2.12.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.27",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
    "websockets>=16.0",
    "yt-dlp>=2026.3.17",
    "redis>=7.4.0",
]

